<resources>
    <string name="app_name">Video LiveWallpager</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="app_subname">Video Wallpager</string>
    <string name="loading">loading…</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="desc">Set Video Wallpaper(MIUI Lock Screen Mode)</string>
    <string name="setwallpaper">Setting WallPager</string>
    <string name="update_success">Update Wallpaper Success!</string>
    <string name="options">Options</string>
    <string name="choose_options">Please choose one option</string>
    <string name="Set_As_Wallpaper">Set As WallPaper</string>
    <string name="play_video">Play Video</string>
    <string name="share_send">Share|Send</string>
    <string name="share_vedios">Share Video</string>
    <string name="deletefile">Delete File</string>
    <string name="cannotdelete">This file is using for wallpaper, please don\'t delete it!</string>
    <string name="cancel">Cacel</string>
    <string name="nofile">No Video, Please Download First</string>
    <string name="choosea">Please set a video wallpaper first!</string>
    <string name="tip">Tip</string>
    <string name="agree">Agree</string>
    <string name="noagree">Don\'t Agree</string>
    <string name="start_dialog_msg">Hello, Our videos were collected from Internet.If you have any infringement, please contact tqj.zyy@gmail.com.</string>
    <string name="closesound">Close Audio</string>
    <string name="opensound">Open Sound</string>
    <string name="setwallpaperfirst">Please set a wallpaper first</string>
    <string name="develop">The feature is developing...</string>
    <string name="aboutme">About me</string>
    <string name="know">I know</string>
    <string name="clickagain">click again to exit app!</string>
    <string name="faxian">New</string>
    <string name="local">Local</string>
    <string name="detail_dialog_msg">The Video has download completed, please choose a option</string>
    <string name="detail_dialog_action1">Set As WallPaper</string>
    <string name="about_msg">I am an independent developer, in order to live, so I added the ad, I hope you can support and understand.</string>
    <string name="openlocal">Open Local</string>
    <string name="camera">Camera</string>
    <string name="cut">Cut Video</string>
    <string name="shareandfeed">Share and Feedback</string>
    <string name="more">More</string>
    <string name="action_share">Share</string>
    <string name="rate">Rate</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="close_wallpaper">Close Wallpaper</string>
    <string name="lianxiwo">Contact me</string>
    <string name="lock">Set Lock Screen(MIUI)</string>
    <string name="studio">MW Studio</string>
    <string name="share_msg">I am using the video wallpaper app: %1$s , There are a lot of videos, such as girl, car and so on. if you want to have a try, please search: "%2$s" in play store!</string>
    <string name="nav_voicechanger">VoiceChanger Free</string>
    <string name="exit_msg">Are you sure to leave us？</string>
    <string name="dialog_ok">Go</string>
    <string name="dialog_cancel">No</string>
    <string name="permission_ok">OK</string>
    <string name="permisson_cancel">NO</string>
    <string name="permission_msg">To preview and download the video you have to read and write the phone memory card yo, please be sure to agree to da!</string>
    <string name="permission_2">Hi, you refuse some of the necessary permissions, please authorize in the setting page!</string>
    <string name="compoment_error">Wallpaper Component misssing!</string>
    <string name="search_hint">Input Key Word</string>
</resources>
